--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,17 +9,17 @@ Authors@R:
            comment = c(ORCID = "https://orcid.org/0000-0002-0846-1202"))
 Description: A random assortment of utility functions.
 License: MIT + file LICENSE
+Imports: 
+    devtools,
+    lintr,
+    magrittr,
+    rcmdcheck,
+    rlang,
+    stringr,
+    usethis (>= 1.6.0)
+Suggests: 
+    testthat
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
-Imports: 
-    lintr,
-    rcmdcheck,
-    devtools,
-    usethis (>= 1.6.0),
-    magrittr,
-    stringr,
-    rlang
-Suggests: 
-    testthat
